# EnumWindow-T

./: .gitignore  CMakeLists.txt  EventSender.cpp  EventSender.hpp  FindWindow.cpp  FindWindow.hpp  FindWindowIDs.h  PropertyWindow.cpp  PropertyWindow.hpp  PropertyWindowIDs.h  PublicDefs.hpp  README.md  RMenuProcessor.cpp  RMenuProcessor.hpp  RuleSet.cpp  RuleSet.hpp  ScanThread.cpp  ScanThread.hpp  SearchWindow.cpp  SearchWindow.hpp  SearchWindowIDs.hpp  TODO  TargetWindow.cpp  TargetWindow.hpp  TargetWindowIDs.h  WindowControlEx.cpp  WindowControlEx.h  WindowOperations.hpp  about.cpp  about.hpp  blocklist.json  blocklist_default.json  blocklist_fx.cpp  blocklist_fx.h  config.cpp  config.h  config.json  menu.rc  menu_items.h  toolset.cpp  (+1 more)
.github/workflows/: build_and_package.yml
Plugins/: PluginLoader.cpp  PluginLoaderWindow.cpp  README_plugins.md  plugin.hpp
Plugins/TinyTitleBar/: plugin_main.cpp
